--- a/test/aoj-3110.test.cpp.md
+++ b/test/aoj-3110.test.cpp.md
@@ -4,7 +4,7 @@ data:
   - icon: ':heavy_check_mark:'
     path: src/Math/ModularArithmetic/modint.hpp
     title: Modint
-  - icon: ':heavy_check_mark:'
+  - icon: ':question:'
     path: src/Utils/debug.hpp
     title: src/Utils/debug.hpp
   - icon: ':heavy_check_mark:'
