[auto-verifier] docs commit f819704c0b912e4accb1edae42a280a60dfb4d78

--- a/test/aoj-3110.test.cpp.md
+++ b/test/aoj-3110.test.cpp.md
@@ -4,7 +4,7 @@ data:
   - icon: ':heavy_check_mark:'
     path: src/Math/ModularArithmetic/modint.hpp
     title: Modint
-  - icon: ':question:'
+  - icon: ':heavy_check_mark:'
     path: src/Utils/debug.hpp
     title: src/Utils/debug.hpp
   - icon: ':heavy_check_mark:'
