[auto-verifier] docs commit 13bb36f401146d7b35532e4067ba6e47fddf771d

--- a/test/aoj-3110.test.cpp.md
+++ b/test/aoj-3110.test.cpp.md
@@ -1,10 +1,10 @@
 ---
 data:
   _extendedDependsOn:
-  - icon: ':heavy_check_mark:'
+  - icon: ':question:'
     path: src/Math/ModularArithmetic/modint.hpp
     title: Modint
-  - icon: ':heavy_check_mark:'
+  - icon: ':question:'
     path: src/Utils/debug.hpp
     title: src/Utils/debug.hpp
   - icon: ':heavy_check_mark:'
