--- a/test/aoj-2880.test.cpp.md
+++ b/test/aoj-2880.test.cpp.md
@@ -5,7 +5,7 @@ data:
     path: src/DataStructure/segment_set.hpp
     title: "\u6574\u6570\u306E\u96C6\u5408\u3092\u533A\u9593\u3067\u7BA1\u7406\u3059\
       \u308B\u30C7\u30FC\u30BF\u69CB\u9020"
-  - icon: ':heavy_check_mark:'
+  - icon: ':question:'
     path: src/Utils/debug.hpp
     title: "\u30C7\u30D0\u30C3\u30B0\u7528\u95A2\u6570\u5F62\u5F0F\u30DE\u30AF\u30ED"
   _extendedRequiredBy: []
